--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"no test\" && exit 0",
-    "semantic-release": "export $(cat .env | xargs) && npx semantic-release --dry-run false"
+    "semantic-release": "export $(cat .env | xargs) && npx semantic-release"
   },
   "author": "Enrico Teterra (TW)",
   "license": "ISC",
