change ci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,11 +49,11 @@ workflows:
     jobs:
       - test:
           filters:
-            tags:
-              only: /^v.*/
+            branches:
+              only: master
       - deploy:
           requires:
             - test
           filters:
-            tags:
-              only: /^v.*/
+            branches:
+              only: master
